Bugfix: register user error msg is missing
